objects/Knowledge__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <label>Knowledge</label>
    <pluralLabel>Knowledge</pluralLabel>
    <fields>
        <fullName>Answer__c</fullName>
        <inlineHelpText>Use this field to document the answer to the question discussed in the Knowledge Article.</inlineHelpText>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <inlineHelpText>Use this field to document the question being answered by this article.  Include important keywords to help users find this article.</inlineHelpText>
        <label>Question</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>URL_Link__c</fullName>
        <label>URL Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Procedure_Steps__c</fullName>
        <inlineHelpText>Use this field to track the ordered procedure steps.</inlineHelpText>
        <label>Procedure Steps</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure_Purpose__c</fullName>
        <inlineHelpText>Use this field to describe the purpose of this procedure.</inlineHelpText>
        <label>Procedure Purpose</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure_Audience__c</fullName>
        <inlineHelpText>Use this field to identify who should follow or execute this procedure.  If you have a set list of people or groups, you could convert it to a pre-defined picklist.</inlineHelpText>
        <label>Procedure Audience</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Procedure_Warnings__c</fullName>
        <inlineHelpText>Use this field to capture warnings and caveats that a user should know before following this procedure.  For example, you may want to include potential impacts or preparation needed before following this procedure.</inlineHelpText>
        <label>Procedure Warnings</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <recordTypes>
        <fullName>FAQ</fullName>
        <active>true</active>
        <description>This can be used for simple question and answer articles.</description>
        <label>FAQ</label>
    </recordTypes>
    <recordTypes>
        <fullName>Procedure</fullName>
        <active>true</active>
        <description>This can be used for defining how to do something or the steps of a procedure.</description>
        <label>Procedure</label>
    </recordTypes>
    <recordTypes>
        <fullName>Techniques</fullName>
        <active>true</active>
        <label>Techniques</label>
    </recordTypes>
    <recordTypes>
        <fullName>Procedure_Guide</fullName>
        <active>true</active>
        <description>This can be used for defining how to do something or the steps of a procedure.</description>
        <label>Procedure Guide</label>
    </recordTypes>
    <recordTypes>
        <fullName>Products_Services</fullName>
        <active>true</active>
        <label>Products &amp; Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>Social_Responsability</fullName>
        <active>true</active>
        <label>Social Responsability</label>
    </recordTypes>
</CustomObject>